fix: fix overflowing infinite scroll brands bug

--- a/src/input.css
+++ b/src/input.css
@@ -50,7 +50,7 @@ h6 {
 }
 
 .brand {
-  @apply flex h-full w-full items-center justify-center text-white px-4 lg:px-10;
+  @apply flex h-full w-full items-center justify-center text-white px-3 lg:px-10;
 }
 
 @keyframes scroll {
